--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,11 +26,12 @@
     
     &-headline {
         font-size: 2.5rem;
-        //color: orangered;
+        color: orangered;
         
         &--gradient {
             @include gradient-text;
-            outline: 3px solid orangered;
+            //outline: 3px solid orangered;
+            overflow-y: hidden;
         }
         
         @include for-tablet-landscape-up {
